--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#abb53f</color>
+    <color name="colorPrimaryDark">#9b9f30</color>
+    <color name="colorAccent">#1f7b33</color>
+
+    <color name="textColorPrimary">#000</color>
+    <color name="textColorSecondary">#929292</color>
+    <color name="backgroundColor">#F5F4F0</color>
+    <color name="black">#000</color>
+    <color name="white">#fff</color>
+    <color name="lightGrey">#b3afaf</color>
+    <color name="brightRed">#b40037</color>
+
+    <color name="roseRed">#b40037</color>
+    <color name="savoyCabbage">#0aad8a</color>
+    <color name="greenBlue">#00b495</color>
+    <color name="purple">#4a2780</color>
+    <color name="lightPurple">#7b68c7</color>
+
 </resources>
