--- a/app/src/main/res/layout/fragment_base_list.xml
+++ b/app/src/main/res/layout/fragment_base_list.xml
@@ -1,45 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/baseListSwipeRefreshLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+                                                       xmlns:tools="http://schemas.android.com/tools"
+                                                       android:id="@+id/baseListSwipeRefreshLayout"
+                                                       android:layout_width="match_parent"
+
+                                                       android:layout_height="match_parent"
+                                                       android:background="@color/backgroundColor">
 
     <FrameLayout
-        android:id="@+id/baseListLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:id="@+id/baseListLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/baseListEmptyResultTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/no_results"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_medium" />
+                style="@style/Content2.Black"
+                android:id="@+id/baseListEmptyResultTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/no_results"/>
 
         <RelativeLayout
-            android:id="@+id/baseListEmptySearchLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
+                android:id="@+id/baseListEmptySearchLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/baseListRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:scrollbarStyle="outsideInset"
-            android:visibility="gone"
-            tools:visibility="visible" />
+                android:id="@+id/baseListRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:scrollbarStyle="outsideInset"
+                android:visibility="gone"
+                tools:visibility="visible"/>
 
         <ProgressBar
-            android:id="@+id/baseListProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+                android:id="@+id/baseListProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
 
     </FrameLayout>
 
