--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,10 +3,12 @@
 
     <item
         android:id="@+id/navigationBars"
+        android:icon="@drawable/ic_bar"
         android:title="@string/bars"/>
 
     <item
         android:id="@+id/navigationMap"
+        android:icon="@drawable/ic_map"
         android:title="@string/map"/>
 
 </menu>
